...
    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:keepScreenOn="true"
        android:lineSpacingMultiplier="1.2"
...
                    android:onClick="playButtonClicked"
                    android:text="@string/play_button"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/nextbutton"
                    style=""
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:gravity="center|bottom"
...
